RESOLVED FIXED80796
Web Inspector: crash opening the Web Inspector in WebKit1 clients
https://bugs.webkit.org/show_bug.cgi?id=80796
Summary Web Inspector: crash opening the Web Inspector in WebKit1 clients
Timothy Hatcher
Reported 2012-03-11 15:58:11 PDT
> 1 com.apple.WebCore 0x7fff86507a2b WebCore::ScriptValue::toString(JSC::ExecState*) const + 0x3b 2 com.apple.WebCore 0x7fff869ec4a8 WebCore::InspectorFrontendClientLocal::evaluateAsBoolean(WTF::String const&) + 0x58 3 com.apple.WebCore 0x7fff866cb603 WebCore::InspectorFrontendClientLocal::setAttachedWindow(bool) + 0x43 4 com.apple.WebCore 0x7fff866ca721 WebCore::jsInspectorFrontendHostPrototypeFunctionLoaded(JSC::ExecState*) + 0x51 5 0x0000491e80601218 0 + 80395351626264 6 com.apple.JavaScriptCore 0x7fff89258c5b JSC::Interpreter::executeCall(JSC::ExecState*, JSC::JSObject*, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) + 0x37b 7 com.apple.JavaScriptCore 0x7fff892588d4 JSC::call(JSC::ExecState*, JSC::JSValue, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) + 0x34 8 com.apple.JavaScriptCore 0x7fff8938fab0 JSC::boundFunctionCall(JSC::ExecState*) + 0x190 9 com.apple.JavaScriptCore 0x7fff89258d5d JSC::Interpreter::executeCall(JSC::ExecState*, JSC::JSObject*, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) + 0x47d 10 com.apple.JavaScriptCore 0x7fff892588d4 JSC::call(JSC::ExecState*, JSC::JSValue, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) + 0x34 11 com.apple.WebCore 0x7fff86a25ba7 WebCore::JSMainThreadExecState::instrumentedCall(WebCore::Page*, JSC::ExecState*, JSC::JSValue, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) + 0x1e7 12 com.apple.WebCore 0x7fff862b6599 WebCore::JSEventListener::handleEvent(WebCore::ScriptExecutionContext*, WebCore::Event*) + 0x349 13 com.apple.WebCore 0x7fff862b6125 WebCore::EventTarget::fireEventListeners(WebCore::Event*, WebCore::EventTargetData*, WTF::Vector<WebCore::RegisteredEventListener, 1ul>&) + 0xf5 14 com.apple.WebCore 0x7fff8621b5d5 WebCore::EventTarget::fireEventListeners(WebCore::Event*) + 0x45 15 com.apple.WebCore 0x7fff8621b6aa WebCore::Node::handleLocalEvents(WebCore::Event*) + 0xaa 16 com.apple.WebCore 0x7fff8621ada4 WebCore::EventDispatcher::dispatchEvent(WTF::PassRefPtr<WebCore::Event>) + 0x324 17 com.apple.WebCore 0x7fff8621aa45 WebCore::EventDispatchMediator::dispatchEvent(WebCore::EventDispatcher*) const + 0x25 18 com.apple.WebCore 0x7fff86905edb WebCore::EventDispatcher::dispatchEvent(WebCore::Node*, WTF::PassRefPtr<WebCore::EventDispatchMediator>) + 0x8b 19 com.apple.WebCore 0x7fff8621a997 WebCore::Node::dispatchEvent(WTF::PassRefPtr<WebCore::Event>) + 0x37 20 com.apple.WebCore 0x7fff86445bcb WebCore::HTMLScriptElement::dispatchLoadEvent() + 0xab 21 com.apple.WebCore 0x7fff86579c74 WebCore::ScriptElement::execute(WebCore::CachedScript*) + 0x124 22 com.apple.WebCore 0x7fff86579a86 WebCore::ScriptRunner::timerFired(WebCore::Timer<WebCore::ScriptRunner>*) + 0x1c6 23 com.apple.WebCore 0x7fff861fde74 WebCore::ThreadTimers::sharedTimerFiredInternal() + 0x94 24 com.apple.WebCore 0x7fff86c7a493 WebCore::timerFired(__CFRunLoopTimer*, void*) + 0x33 25 com.apple.CoreFoundation 0x7fff88ebe974 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ + 0x14 26 com.apple.CoreFoundation 0x7fff88ebe48d __CFRunLoopDoTimer + 0x22d 27 com.apple.CoreFoundation 0x7fff88ea3ea9 __CFRunLoopRun + 0x5d9 28 com.apple.CoreFoundation 0x7fff88ea3579 CFRunLoopRunSpecific + 0xe9 29 com.apple.HIToolbox 0x7fff876c4d54 RunCurrentEventLoopInMode + 0xd1 30 com.apple.HIToolbox 0x7fff876cbf66 ReceiveNextEventCommon + 0x164 31 com.apple.HIToolbox 0x7fff876cbdf7 BlockUntilNextEventMatchingListInMode + 0x3e 32 com.apple.AppKit 0x7fff84c53b4a _DPSNextEvent + 0x2ad 33 com.apple.AppKit 0x7fff84c53409 -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] + 0x80 34 com.apple.AppKit 0x7fff84c4ffe3 -[NSApplication run] + 0x205 35 com.apple.AppKit 0x7fff84ec180b NSApplicationMain + 0x365 36 com.apple.iChat 0x102c1068e main + 0x2be (main.m:71) 37 libdyld.dylib 0x7fff845457e1 start + 0x1
Attachments
Proposed Change (2.60 KB, patch)
2012-03-11 15:59 PDT, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2012-03-11 15:59:15 PDT
Created attachment 131259 [details] Proposed Change
WebKit Review Bot
Comment 2 2012-03-11 17:40:58 PDT
Comment on attachment 131259 [details] Proposed Change Clearing flags on attachment: 131259 Committed r110402: <http://trac.webkit.org/changeset/110402>
WebKit Review Bot
Comment 3 2012-03-11 17:41:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.