Fix a crash opening the Web Inspector in WebKit1 clients.

The call to InspectorFrontendClientLocal::setAttachedWindow is preformed really early in the process,
causing it to crash almost every time. It should use evaluateOnLoad instead of evaluateAsBoolean.

<rdar://problem/10951109> Crash when bringing up Web Inspector in WebKit1 client
https://bugs.webkit.org/show_bug.cgi?id=80796

Reviewed by Brian Weinstein.

* inspector/InspectorFrontendClientLocal.cpp:
(WebCore::InspectorFrontendClientLocal::setAttachedWindow): Use evaluateOnLoad instead of evaluateAsBoolean.


Canonical link: https://commits.webkit.org/97992@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110402 268f45cc-cd09-0410-ab3c-d52691b4dbfc